Minor changes connected to Colour Pots  - bug fixed in CPOT edit Title SmartInput  - demo data changed to new format for "puddle sky" colour pot  - bug fixed on Options pane (temporary) exportable JSON for cpots not showing

--- a/css-cpot-edit.css
+++ b/css-cpot-edit.css
@@ -427,7 +427,7 @@
 #cp-edit-tabs .colour-sun.s{
     width: 50px;
     height: 50px;
-    border-radius: 30px;
+    border-radius: 25px;
     position: absolute;
     right: 35px;
     top: 5px;
